fixed music library table spacing

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -339,9 +339,12 @@
   tr td{
     text-align: center;
     padding:1%;
+    margin: 1% 2%
   }
   
   .event_date { min-width:150px; }
+
+  th.actions_col { width: 100px;}
 
   tr th{ padding:0.5%; }
 
